# VisioPlot

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h
data/: testdata.txt.txt
